# projects

bimap/: bimap.h  map.h  node.h
fs/: .Module.symvers.cmd  .entrypoint.o.cmd  .http.o.cmd  .modules.order.cmd  .networkfs.ko.cmd  .networkfs.mod.cmd  .networkfs.mod.o.cmd  .networkfs.o.cmd  defs.h  entrypoint.c  http.c  http.h  modules.order  networkfs.ko  networkfs.mod  networkfs.mod.c  nfs.h  nfs_ops.h  reload.sh
fs/6lab/: algo.sh  big_launcher.sh  kostyl.sh  launcher.sh
ll1-gen/: build.gradle.kts  settings.gradle.kts
ll1-gen/src/main/antlr/: Input.g4
ll1-gen/src/main/java/parser/: Input.interp  InputBaseListener.java  InputLexer.interp  InputLexer.java  InputLexer.tokens  InputListener.java  InputParser.java
ll1-gen/src/main/kotlin/: Generator.kt
ll1-gen/src/main/kotlin/data/: Atom.kt  Epsilon.kt  NoTerminal.kt  NoTerminalRule.kt  Rule.kt  Terminal.kt  TerminalRule.kt
ll1-gen/src/main/kotlin/generator/: AbstractGenerator.kt  BaseLexer.kt  LexerGenerator.kt  ParserGenerator.kt
ll1-gen/src/main/kotlin/parsegr/: InputListenerImpl.kt
ll1-gen/src/main/kotlin/utils/: Exceptions.kt
ll1-gen/src/test/kotlin/: CalcTest.kt  GeneratorCheck.kt  PLambdaTest.kt
ll1-gen/src/test/resources/: Expr.ps  NoLL.ps  PLambda.ps
llvm-trans/: CMakeLists.txt  LLVMVisitor.h  Language.g4  antlr.cpp  main.cpp  main.prog  run.sh  sim.cpp  sim.h
llvm-trans/libs/: Language.interp  Language.tokens  LanguageBaseVisitor.cpp  LanguageBaseVisitor.h  LanguageLexer.cpp  LanguageLexer.h  LanguageLexer.interp  LanguageParser.cpp  LanguageParser.h  LanguageVisitor.cpp  LanguageVisitor.h
lzw/: decompress.asm  decompress.h  tmain.c
sprintf/: .gdbinit  print.asm  run.sh  task.txt  tmain.c
variant/: variant.h  variant_details.h  variant_stuff.h  variant_visit.h
